# mygica_withui

./: .gitignore  0_gen_black.py  A_compiler.py  README.md  clean_orphans.py  ffmpeg.cmd  mygo_keyframes.csv  pyproject.toml  requirements.txt  run.bat  setup.txt  srt2MyGICA.py  structure.py  time_based_cache.py  time_data.pkl  ui_server.py  video_sourcedir_Hank.txt  vis_sources.json  日不落的爱音.MyGICA.toml  示例.MyGICA.toml
betterer/: __init__.py
cache_output/: 示例.MyGICA.aac  示例.MyGICA_recode.aac
src/MyGICA/: A_compiler.py  srt2MyGICA.py  structure.py  time_based_cache_cleaner.py
static/: app.js  editor.js  mygo_keyframes.json  style.css  visedit.js
templates/: editor.html  home.html  index.html  visedit.html
