[project]
name = "MyGICA"
version = "1.0.0"
description = "My Glimpse Interface for Cutting Abandon of MyGO!!!!! & MUJICA"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dacite>=1.9.2",
    "flask==3.*",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "pysrt>=1.1.2",
]
